# discord-package-app

./: .easignore  .gitignore  App.tsx  LICENSE  README.md  app.config.ts  app.json  biome.json  build-android-lib.ps1  build-android-lib.sh  build-ios-lib.sh  build-ios-sim-lib.sh  eas.json  metro.config.js  mock.json  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-android.yml  release-ios.yml
assets/: LICENSE
assets/dispackage-internal.icon/: icon.json
assets/dispackage.Icon/: icon.json
dpkg-rs/: Cargo.toml
dpkg-rs/src/: lib.rs
dpkg-rs/src/models/: channel.rs  discord_models.rs  events.rs  extracted_data.rs  message.rs  mod.rs  observer.rs  payment.rs  user.rs  user_data.rs
dpkg-rs/src/parser/: analytics.rs  callback.rs  channels.rs  mod.rs  servers.rs  user.rs  utils.rs
modules/dpkg-module/: expo-module.config.json  index.ts
modules/dpkg-module/android/: build.gradle
modules/dpkg-module/ios/: Dpkgrs.podspec  DpkgrsModule.swift
modules/dpkg-module/src/: Dpkgrs.types.ts  DpkgrsModule.ts
src/: App.tsx
src/components/: FavChannelsList.tsx  FavDmsList.tsx  FavTextList.tsx  ProfileList.tsx  index.ts  logo.tsx
src/components/analytics/: ActivityAnalytics.tsx  AdditionalEvents.tsx  BotCommands.tsx  MessageInteractions.tsx  SecurityAnalytics.tsx  VoiceAnalytics.tsx
src/components/overview/: FavChannelsList.tsx  FavDmsList.tsx  FavEmoteList.tsx  FavTextList.tsx  ProfileList.tsx  index.ts
src/components/sections/: index.tsx
src/components/sections/analytics/: ActivityAnalytics.tsx  AdditionalEvents.tsx  BotCommands.tsx  MessageInteractions.tsx  SecurityAnalytics.tsx  VoiceAnalytics.tsx  index.ts
src/components/sections/overview/: FavChannelsList.tsx  FavDmsList.tsx  FavEmoteList.tsx  FavTextList.tsx  ProfileList.tsx  index.ts
src/components/sections/settings/: AppInfo.tsx  AppearanceSection.tsx  (+6 more)
src/components/ui/: TableRow.tsx  button.tsx  checkbox.tsx  header.tsx  index.ts  navbar.tsx  radio.tsx  switch.tsx  toggle.tsx
src/context/: DiscordContext.tsx
src/hooks/: useDiscord.ts
src/lib/: utils.ts
src/navigation/: MainScreenNavigator.tsx  types.ts
src/screens/: AnalysisScreen.tsx  AnalyticsScreen.tsx  HelpScreen.tsx  LoadingScreen.tsx  MessagesScreen.tsx  OverviewScreen.tsx  PrivacyScreen.tsx  ProcessScreen.tsx  SettingsScreen.tsx  StartScreen.tsx  WelcomeScreen.tsx  index.ts
src/theme/: ThemeProvider.tsx  colors.ts  components.tsx  fonts.ts  index.ts  storage.ts  utils.ts
src/types/: index.ts
src/utils/: discordUtils.ts
(+3 files in other folders)
