[package]
name = "dpkg-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
csv = "1.3.1"
jsonwebtoken = "10.0.0"
lazy_static = "1.5.0"
memchr = "2.7.6"
memmap2 = "0.9.8"
rayon = "1.11.0"
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
simd-json = "0.16.0"
sysinfo = { version = "0.37.1", features = ["apple-app-store", "apple-sandbox"] }
tokio = { version = "1.47.1", features = ["full"] }
uniffi = { version = "0.29.4", features = ["cli"] }
uuid = { version = "1.18.1", features = ["v4"] }
zip = "5.1.1"

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }

[lib]
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
