[package]
name = "dpkg-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
csv = "1.4.0"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
lazy_static = "1.5.0"
memchr = "2.7.6"
memmap2 = "0.9.9"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simd-json = "0.17.0"
sysinfo = { version = "0.37.2", features = ["apple-app-store", "apple-sandbox"] }
tokio = { version = "1.49.0", features = ["full"] }
uniffi = { version = "0.31.0", features = ["cli"] }
uuid = { version = "1.20.0", features = ["v4"] }
zip = "7.2.0"

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }

[lib]
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
